...
          "Are you sure you want to delete this event?",
          style: GoogleFonts.cairo(),
        ),
        actions: [
          TextButton(
            onPressed: () => Navigator.pop(context),
            child: const Text("Cancel"),
          ),
          ElevatedButton(
            onPressed: () async {
              await MyEventsViewModel().deleteCurrentEvent(eventId, userId);
              Navigator.pop(context);
              refreshData();
            },
            child: const Text("Delete"),
          ),
        ],
      ),
    );
  }

...
    EventCategory selectedCategory = event?.category ?? EventCategory.other;

    showDialog(
      context: context,
      builder: (BuildContext context) {
        return Dialog(
          key: const Key('eventDialog'),
          shape:
              RoundedRectangleBorder(borderRadius: BorderRadius.circular(15)),
          child: Container(
            width: MediaQuery.of(context).size.width * 0.8,
            padding: const EdgeInsets.all(20.0),
            child: Form(
...
                    ),
                    const SizedBox(height: 20),
                    TextFormField(
                      validator: _viewModel.validateEventName,
                      controller: nameController,
                      decoration: InputDecoration(
                        labelText: "Event Name",
                        labelStyle: GoogleFonts.cairo(),
                        border: OutlineInputBorder(
                          borderRadius: BorderRadius.circular(10),
                        ),
                      ),
                    ),
                    const SizedBox(height: 15),
                    TextField(
                      controller: dateController,
                      decoration: InputDecoration(
                        labelText: "Date & Time (yyyy-MM-dd HH:mm)",
                        labelStyle: GoogleFonts.cairo(),
                        border: OutlineInputBorder(
                          borderRadius: BorderRadius.circular(10),
                        ),
                      ),
                      onTap: () async {
...
                    ),
                    const SizedBox(height: 15),
                    TextFormField(
                      validator: _viewModel.validateEventLocation,
                      controller: locationController,
                      decoration: InputDecoration(
                        labelText: "Event Location",
                        labelStyle: GoogleFonts.cairo(),
                        border: OutlineInputBorder(
                          borderRadius: BorderRadius.circular(10),
                        ),
                      ),
                    ),
                    const SizedBox(height: 15),
                    DropdownButtonFormField<EventCategory>(
                      key: const Key('eventDropDown'),
                      value: selectedCategory,
                      decoration: InputDecoration(
                        labelText: "Category",
                        labelStyle: GoogleFonts.cairo(),
                        border: OutlineInputBorder(
                          borderRadius: BorderRadius.circular(10),
...
                                SnackBar(
                                    content: Text(
                                        'Please fill all required fields.')),
                              );
                            }
                          },
                          child: Text(isEditing ? "Save" : "Create"),
                        ),
                      ],
                    ),
                  ],
                ),
              ),
...
