...
  birthday,
  wedding,
  corporate,
  entertainment,
  graduation,
  eid,
  engagement,
  other
}

class Event {
  String id; // Unique identifier for the event
  String eventName;
  String ownerId; // Reference to the User who owns the event
...
