...
                textAlign: TextAlign.center,
              ),
              SizedBox(height: 40),
              Form(
                key: formKey,
                child: Column(
                  key: Key("loginForm"),
                  crossAxisAlignment: CrossAxisAlignment.stretch,
                  children: [
                    TextFormField(
                      controller: _emailController,
                      decoration: const InputDecoration(
                        labelText: 'Email',
...
